@@ -7,6 +7,7 @@ Updates
 - renamed method compare_gps to analyze_with_bfs
 - analyze_with_bfs computes error, std, and returns tabulated results
 - added docs
+- added class DfsDataGP
 
 
 0.3.1
